<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ACTlogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoapp"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_margin="@dimen/imgLogin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="@dimen/tilLogin"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieUser"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/tilLogin"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/til_margin"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/cbBnt_marginBottom">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnLogin_margin"
            android:layout_weight="50"
            android:text="@string/btnLogin" />
        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_margin="@dimen/btnLogin_margin"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar" />

    </LinearLayout>

</LinearLayout>