<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.singup.SingUpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imgperfil" />

        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.805"
            app:srcCompat="@drawable/ic_editprofile" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNom"
        android:layout_width="@dimen/tilLogin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/tilSingUp_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieNom" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="@dimen/tilLogin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tilSingUp_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieEmail"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/tilLogin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tilSingUp_margin"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiePassword"
            android:inputType="textPassword"            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tiePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRePassword"
        android:layout_width="@dimen/tilLogin"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/tilSingUp_margin"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieRePassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tieRePassword" />
    </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btnRegistrarse" />


</LinearLayout>