<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.eventos.EventosManage.EditarEventoFragment">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:text="@string/evento"
            android:textColor="@color/black"
            android:textSize="45sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            android:layout_width="320dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/til_margin_editar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/til_margin_editar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvHoraIni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hora_de_inicio" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/imgHoraIni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/til_margin_editar"
                android:background="@drawable/shape_btnreloj"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/til_margin_editar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvHoraFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/hora_de_fin" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/imgHoraFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/til_margin_editar"
                android:background="@drawable/shape_btnreloj"
                android:src="@drawable/ic_time" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="320dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/til_margin_editar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="Fecha" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/imgDataPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/til_margin_editar"
                android:background="@drawable/shape_btnreloj"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/til_margin_editar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descipcion" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prioridad"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spPrioridades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:entries="@array/prioridades_array"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    tools:layout_editor_absoluteX="15dp"
                    tools:layout_editor_absoluteY="195dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_drop" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
